crates/shingetsu-compiler/tests/compile_fail/enum_identical_discriminants.rs
use shingetsu::FromLua;

#[derive(FromLua)]
enum Bad {
    A(i64),
    B(i32),
}

fn main() {}
